--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,10 @@ body {
     color: red;
     background: black;
 }
+
+header {
+    border-bottom: solid 2px rgb(196, 47, 47);
+    padding: 20px;
+    font-size: 32px;
+    color: red;
+}
