--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,14 @@ header {
     color: red;
 }
 
+section {
+	background: black;
+	padding-bottom: 80px;
+	padding-top: 80px;
+	display: flex;
+	justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
