--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     color: red;
     background: black;
+    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
@@ -11,13 +13,21 @@ header {
 }
 
 section {
-	background: black;
-	padding-bottom: 80px;
-	padding-top: 80px;
-	display: flex;
-	justify-content: center;
+    background: black;
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
 }
 
 .chamada-texto {
     margin-right: 5%;
 }
+
+h1 {
+    font-size: 40px;
+  }
+  
+  p {
+    font-size: 20px;
+  }
