--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,60 @@
 body {
-    color: red;
-    background: black;
-    margin: 0px;
-    font-family: "Chakra Petch", sans-serif;
+  color: red;
+  background: black;
+  margin: 0px;
+  font-family: "Chakra Petch", sans-serif;
+  margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(12, 28, 92);
-    padding: 20px;
-    font-size: 32px;
-    color: red;
+  border-bottom: solid 2px rgb(12, 28, 92);
+  padding: 20px;
+  font-size: 32px;
+  color: red;
 }
 
-section {
-    background: black;
-    padding-bottom: 80px;
-    padding-top: 80px;
-    display: flex;
-    justify-content: center;
+.chamada {
+  background: black;
+  padding-bottom: 80px;
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
 }
 
 .chamada-texto {
-    margin-right: 5%;
+  margin-right: 5%;
 }
 
 h1 {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 p {
-    font-size: 20px;
-}
-
-img {
-    height: 200px;
+  font-size: 20px;
 }
 
 .categoria-videos {
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
 }
 
 .categoria {
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 50px;
+}
+
+.categoria-videos img {
+  opacity: 0.5;
+  height: 200px;
+}
+
+.categoria-videos img:hover {
+  opacity: 1.0;
+  border: 3px solid rgb(12, 28, 92);
+}
+
+.categoria h2 {
+  color: rgb(12, 28, 92);
 }
